# SIMPLE_DPDK_APP

./: CMakeLists.txt  README.md  main.c  meson.build  run_prog.sh  setup_dpdk.sh
cmake/: FindDPDK.cmake
icmp/: CMakeLists.txt
icmp/src/: main.c
